# subdivision

./: README.md  setup.py  site.cfg
cpp/doosabin/: CMakeLists.txt  doosabin_test.cpp  generate_doosabin_test_data.py
cpp/doosabin/include/: doosabin.h  uniform_quadratic_bspline.h
doosabin/: .gitignore  CMakeLists.txt  doosabin.h  doosabin.py  doosabin.pyx  doosabin_.pyx  doosabin_pyx.h  doosabin_test.cpp  example.cpp  generate_doosabin_test_data.py  uniform_quadratic_bspline.h
doosabin/cpp/: CMakeLists.txt
doosabin/cpp/include/: doosabin.h  uniform_quadratic_bspline.h
doosabin/examples/: visualise_doosabin_subdivision.py
doosabin/verification/: common.py  derivatives.py  derivatives_numeric.py  derivatives_symbolic.py  evaluation.py
examples/doosabin/: visualise_doosabin_subdivision.py  visualise_subdivision.py
loop/: loop.py
loop/verification/: common.py  derivatives_numeric.py  loop.py
subdivision/: __init__.py
subdivision/doosabin/: .gitignore  __init__.py  doosabin.py  doosabin_.pyx  doosabin_pyx.h
subdivision/loop/: __init__.py  loop.py
verification/doosabin/: common.py  derivatives_numeric.py  derivatives_symbolic.py  evaluation.py
verification/loop/: common.py  derivatives_numeric.py  evaluation.py
