CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)

PROJECT(DOO-SABIN)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET(EIGEN_INCLUDE_DIR "" CACHE PATH "")
INCLUDE_DIRECTORIES(${EIGEN_INCLUDE_DIR})

SET(RSUTIL_INCLUDE_DIR "" CACHE PATH "")
INCLUDE_DIRECTORIES(${RSUTIL_INCLUDE_DIR})

SET(DOOSABIN_HDRS doosabin.h)

ADD_EXECUTABLE(example
               example.cpp
               ${DOOSABIN_HDRS})
